# music-list

./: .gitignore  CMakeLists.txt  LICENSE  README.md  append_license.py  meson.build  meson_options.txt  prepend_license.py
cmake_modules/: FindFLAC.cmake  FindOpus.cmake  FindOpusfile.cmake
doc/: m4a.hex  ogg-flac.hex  ogg.hex  opus.hex
res/: db_init.ddl  musiclist.sqlite
src/: Album.cpp  Album.hpp  BlockPicture.cpp  BlockPicture.hpp  CMakeLists.txt  Importer.cpp  Importer.hpp  Track.cpp  Track.hpp  config.hpp.in  meson.build  music_list.cpp
src/cli/: CMakeLists.txt  meson.build  music_list.cpp
src/core/: Album.cpp  Album.hpp  CMakeLists.txt  Importer.cpp  Importer.hpp  Track.cpp  Track.hpp  meson.build
src/db/: db_init.ddl
src/gui/: StartupWindow.cpp  StartupWindow.hpp  meson.build  music_list_gtk.cpp
test/: AlbumTest.cpp  BlockPictureTest.cpp  CMakeLists.txt  ImporterTest.cpp  ListTest.cpp  TrackTest.cpp  meson.build
test/res/: README.md
ui/: startup_window.glade
